--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.js329.sportsvideotagging">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <uses-feature android:name="android.hardware.type.watch" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +13,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SportsVideoTagging">
+        <activity android:name=".activities.EditTeamsActivity"></activity>
+        <activity
+            android:name=".activities.TaggingActivity"
+            android:label="@string/title_activity_tagging" />
+        <activity
+            android:name=".activities.ConfigurationActivity"
+            android:label="@string/title_activity_configuration" />
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
