--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SportsVideoTagging">
-        <activity android:name=".activities.EditPlayersActivity"/>
+        <activity android:name=".activities.EditAttributesActivity"></activity>
+        <activity android:name=".activities.EditPlayersActivity" />
         <activity android:name=".activities.EditTeamsActivity" />
         <activity
             android:name=".activities.TaggingActivity"
