--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,6 @@
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <uses-feature android:name="android.hardware.type.watch" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SportsVideoTagging">
-        <activity android:name=".activities.EditAttributesActivity"></activity>
+        <activity android:name=".activities.EditEventTypesActivity"/>
+        <activity android:name=".activities.EventTypeDetailsActivity"/>
+        <activity android:name=".activities.EditAttributesActivity" />
         <activity android:name=".activities.EditPlayersActivity" />
         <activity android:name=".activities.EditTeamsActivity" />
         <activity
