--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SportsVideoTagging">
-        <activity android:name=".activities.TaggingActivity"></activity>
+        <activity android:name=".activities.TaggingActivity"/>
         <activity android:name=".activities.PreTaggingActivity" />
         <activity android:name=".activities.EditEventTypesActivity" />
         <activity android:name=".activities.EventTypeDetailsActivity" />
@@ -24,7 +24,6 @@
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
