--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SportsVideoTagging">
-        <activity android:name=".activities.TaggedMatchesOverviewActivity"></activity>
+        <activity android:name=".activities.LongTimedEventTypeDetailsActivity"></activity>
+        <activity android:name=".activities.TaggedMatchesOverviewActivity" />
         <activity android:name=".activities.TaggingActivity" />
         <activity android:name=".activities.PreTaggingActivity" />
         <activity android:name=".activities.EditEventTypesActivity" />
