--- a/.gitignore
+++ b/.gitignore
@@ -198,3 +198,27 @@ output.json
 # with Android Studio 3.5.
 
 # End of https://www.toptal.com/developers/gitignore/api/android
+
+
+# Created by https://www.toptal.com/developers/gitignore/api/react
+# Edit at https://www.toptal.com/developers/gitignore?templates=react
+
+### react ###
+.DS_*
+*.log
+logs
+**/*.backup.*
+**/*.back.*
+
+node_modules
+bower_components
+
+*.sublime*
+
+psd
+thumb
+sketch
+
+# End of https://www.toptal.com/developers/gitignore/api/react
+
+dist/
