--- a/sport_video_tagging_player/package.json
+++ b/sport_video_tagging_player/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "buffer": "^6.0.3",
     "html-webpack-plugin": "^4.5.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "stream": "0.0.2",
+    "timers": "^0.1.1",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
