--- a/sport_video_tagging_player/package.json
+++ b/sport_video_tagging_player/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "start": "webpack serve",
     "compile": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production",
+    "deploy": "gh-pages -d dist",
+    "publish-demo": "npm run build && npm run deploy"
   },
-  "author": "Jannik Schlemmer",
+  "author": "Jannik S.",
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
@@ -33,5 +36,6 @@
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
-  }
+  },
+  "homepage": "https://js329.pages.mi.hdm-stuttgart.de/sports_video_tagging"
 }
