--- a/sport_video_tagging_player/package.json
+++ b/sport_video_tagging_player/package.json
@@ -17,6 +17,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "buffer": "^6.0.3",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
