--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ before_script:
 pages:
   stage: deploy
   script:
-    - npm run publish-demo
+    - npm run build
     - rm -rf public
     - mv dist public
   artifacts:
