--- a/sport_video_tagging_player/package.json
+++ b/sport_video_tagging_player/package.json
@@ -7,9 +7,7 @@
     "start": "webpack serve",
     "compile": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production",
-    "deploy": "gh-pages -d dist",
-    "publish-demo": "npm run build && npm run deploy"
+    "build": "webpack --mode production"
   },
   "author": "Jannik S.",
   "license": "ISC",
@@ -17,7 +15,6 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "buffer": "^6.0.3",
-    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
